Implemented Material mapping.
Added 'MELON' and 'PUMPKIN' to plants list.
Allows the mapping of growth modifiers from 'MELON' to 'MELON_STEM'
without a warning.

Fixed wrongly placed warning message.

Added 'DEAD_BUSH' to plant materials.
Causes PlayerInteractEvent to not trigger when trying to destroy a dead
bushes with a seed material in hand.

Fixed a bug related to plants that can grow in dark.

Changed default GrowthModifiers.yml.
Merged plants with a '_plant' variant.

New default Config.yml
Changes your_world_end to correct your_world_the_end.

Fixed a NPE and an IAE.

Implemented changes by the VersionMapper and the MaterialMapper.

Updated VersionMapper.

Updated RealisticPlantGrowth main instance.

Updated BlockBreakListener.

New MaterialMapper Class.

Begin to refactor some methods out of RealisticPlantGrowth.class.