@@ -2,25 +2,27 @@ package de.nightevolution.utils.mapper;
 
 import de.nightevolution.RealisticPlantGrowth;
 import de.nightevolution.utils.Logger;
-import org.bukkit.Bukkit;
 import org.bukkit.Material;
+import org.bukkit.Tag;
 import org.bukkit.block.Block;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Set;
 
 public abstract class VersionMapper {
 
-    private final RealisticPlantGrowth instance;
     private final Logger logger;
+    private final MaterialMapper materialMapper;
 
     /**
      * A set of plant materials used for the 'require_hoe_to_harvest' setting in the {@link RealisticPlantGrowth} plugin.
      * These {@link Material}s represent agricultural plants that require a hoe to be harvested.
      */
-    protected static final Set<Material> agriculturalPlants = new HashSet<>(Arrays.asList(
+    static final Set<Material> agriculturalPlants = new HashSet<>(Arrays.asList(
             Material.ATTACHED_MELON_STEM,
             Material.ATTACHED_PUMPKIN_STEM,
             Material.BEETROOTS,
@@ -40,7 +42,7 @@ public abstract class VersionMapper {
      * This set includes various plant {@link Material}s found on land.
      * Saplings are added later to this set.
      */
-    protected static final Set<Material> plants = new HashSet<>(Arrays.asList(
+    static final Set<Material> plants = new HashSet<>(Set.of(
             Material.BAMBOO,
             Material.BAMBOO_SAPLING,
             Material.BROWN_MUSHROOM,
@@ -53,12 +55,14 @@ public abstract class VersionMapper {
             Material.CHORUS_PLANT,
             Material.COCOA,
             Material.CRIMSON_FUNGUS,
+            Material.DEAD_BUSH,
             Material.GLOW_LICHEN,
-            Material.SHORT_GRASS,
+            Material.MELON,
             Material.MELON_STEM,
             Material.NETHER_WART,
             Material.PITCHER_CROP,
             Material.POTATOES,
+            Material.PUMPKIN,
             Material.PUMPKIN_STEM,
             Material.RED_MUSHROOM,
             Material.SUGAR_CANE,
@@ -74,19 +78,21 @@ public abstract class VersionMapper {
             Material.WEEPING_VINES_PLANT,
             Material.WHEAT
     ));
+    static Set<Material> saplings;
 
     /**
      * A set of all supported aquatic plants in the {@link RealisticPlantGrowth} plugin.
      * These {@link Material} represent plant {@link Block}s typically found in aquatic environments.
      */
-    protected static final Set<Material> aquaticPlants = new HashSet<>(Arrays.asList(
+    static final Set<Material> aquaticPlants = new HashSet<>(Set.of(
             Material.KELP,
+            Material.KELP_PLANT,
             Material.SEAGRASS,
             Material.SEA_PICKLE,
             Material.TALL_SEAGRASS
     ));
 
-    protected static final Set<Material> upwardsGrowingPlants = new HashSet<>(Arrays.asList(
+    static final Set<Material> upwardsGrowingPlants = new HashSet<>(Set.of(
             Material.BAMBOO,
             Material.BAMBOO_SAPLING,
             Material.KELP,
@@ -97,14 +103,14 @@ public abstract class VersionMapper {
             Material.TWISTING_VINES_PLANT
     ));
 
-    protected static final Set<Material> downwardsGrowingPlants = new HashSet<>(Arrays.asList(
+    static final Set<Material> downwardsGrowingPlants = new HashSet<>(Set.of(
             Material.CAVE_VINES,
             Material.CAVE_VINES_PLANT,
             Material.WEEPING_VINES,
             Material.WEEPING_VINES_PLANT
     ));
 
-    protected static final Set<Material> growEventReturnsAirBlockPlants = new HashSet<>(Arrays.asList(
+    static final Set<Material> growEventReturnsAirBlockPlants = new HashSet<>(Set.of(
             Material.CHORUS_FLOWER,
             Material.CHORUS_PLANT,
             Material.MELON_STEM,
@@ -113,78 +119,182 @@ public abstract class VersionMapper {
             Material.CACTUS
     ));
 
+
+    /**
+     * Mapping of clickable seeds to their corresponding plant materials.
+     * Key: Clickable Seed ({@link Material}) , Value: Plant {@link Material}
+     */
+    private static HashMap<Material, Material> clickableSeedsMap;
+
+    /**
+     * Set of materials representing clickable seeds.
+     */
+    private static HashSet<Material> clickableSeeds;
+
+
+    private static final String logFile = "debug";
+    private static final String treeLogFile = "treeLog";
+
+    protected Material grassMaterial;
+
     protected VersionMapper() {
-        this.instance = RealisticPlantGrowth.getInstance();
+        this.materialMapper = new MaterialMapper(this);
         this.logger = new Logger(this.getClass().getSimpleName(), RealisticPlantGrowth.isVerbose(), RealisticPlantGrowth.isDebug());
     }
 
+    public void reload() {
+        plants.add(getGrassMaterial());
+        getSaplingsTag();
+        materialMapper.updateGrowthModifiedPlants();
+        materialMapper.updateGrowInDark();
+        updateClickableSeeds();
+    }
+
     /**
-     * Checks if the given String is a valid plant {@link Material} in the {@link Bukkit} {@link Material} system.
-     *
-     * @param materialString The string representation of the {@link Material}  to be checked.
-     * @return {@code true} if the material is a valid plant or aquatic plant material, {@code false} otherwise.
+     * Adds all saplings to the seeds and plants list.
+     * Saplings are chosen by vanilla {@code saplings} tag.
+     * AZALEA and FLOWERING_AZALEA are also included.
      */
-    public boolean checkPlantMaterial(@NotNull String materialString) {
-        Material m = Material.getMaterial(materialString);
-
-        if (m == null)
-            logger.warn("Material '" + materialString + "' is not a Bukkit Material!");
-
-        else if (instance.isAPlant(m) || instance.isAnAquaticPlant(m))
-            return true;
-
-        else
-            logger.warn("Material '" + materialString + "' is not a Plant Material!");
-
-
-        return false;
+    private void getSaplingsTag() {
+        logger.verbose("Getting saplings tag...");
+        saplings = (Tag.SAPLINGS.getValues());
+        plants.addAll(saplings);
     }
 
-    public Material getMappedPlantName(@NotNull Material m) {
-        String materialString = m.toString().toLowerCase();
 
-        if (materialString.contains("bamboo"))
-            return Material.BAMBOO;
 
-        if (materialString.contains("melon"))
-            return Material.MELON_STEM;
+    /**
+     * Updates the set of clickable seeds based on the specified plant and aquatic plant {@link Material}s.
+     * Additionally, performs debug logging if the debug mode is enabled.
+     */
+    protected void updateClickableSeeds() {
+        clickableSeedsMap = new HashMap<>();
+        clickableSeeds = new HashSet<>();
 
-        if (materialString.contains("pumpkin"))
-            return Material.PUMPKIN_STEM;
 
-        if (materialString.contains("carrot"))
-            return Material.CARROTS;
-
-        if (materialString.contains("potato")) {
-            return Material.POTATOES;
+        for (Material plant : plants) {
+            logger.verbose(plant.toString());
+            clickableSeedsMap.put(plant.createBlockData().getPlacementMaterial(), plant);
         }
 
-        if (materialString.contains("cocoa")) {
-            return Material.COCOA;
+        for (Material plant : aquaticPlants) {
+            logger.verbose(plant.toString());
+            clickableSeedsMap.put(plant.createBlockData().getPlacementMaterial(), plant);
         }
 
-        if (materialString.contains("beetroot")) {
-            return Material.BEETROOTS;
-        }
+        clickableSeeds.addAll(clickableSeedsMap.keySet());
 
-        if (materialString.contains("cave_vine")) {
-            return Material.CAVE_VINES;
-        }
 
-        if (materialString.contains("twisting_vine")) {
-            return Material.TWISTING_VINES;
-        }
+        // getPlacementMaterial() returns AIR for e.g. BAMBOO_SAPLING
+        clickableSeeds.remove(Material.AIR);
 
-        if (materialString.contains("weeping_vine")) {
-            return Material.WEEPING_VINES;
-        }
+        // also remove torchFlower, since it is already a fully grown decoration plant
+        clickableSeeds.remove(Material.TORCHFLOWER);
 
-        if (materialString.contains("kelp")) {
-            return Material.KELP;
-        }
-
-        return m;
     }
 
+    // Getters
+    public MaterialMapper getMaterialMapper() {
+        return materialMapper;
+    }
+
+    /**
+     * Retrieves the corresponding {@link Material} that a seed converts to if the seed is placed.
+     *
+     * @param seed {@link Material} representing the seed to inquire about.
+     * @return The {@link Material} that the provided seed can grow into, or {@code null} if not applicable.
+     */
+    @Nullable
+    public Material getMaterialFromSeed(@NotNull Material seed) {
+        if (clickableSeeds.contains(seed))
+            return clickableSeedsMap.get(seed);
+        return null;
+    }
+
+    public boolean isPlantMaterial(Material material) {
+        return plants.contains(material) || aquaticPlants.contains(material);
+    }
+
+    /**
+     * Checks if the given {@link Material} is a plant.
+     *
+     * @param m The {@link Material} to check.
+     * @return {@code true} if the {@link Material} m is a plant, {@code false} otherwise.
+     */
+    public boolean isAPlant(@NotNull Material m) {
+        return plants.contains(m);
+    }
+
+    /**
+     * Checks if the given {@link Block} represents an agricultural plant.
+     *
+     * @param b The {@link Block} to check.
+     * @return {@code true} if the {@link Block} b is an agricultural plant, {@code false} otherwise.
+     */
+    public boolean isAgriculturalPlant(@NotNull Block b) {
+        return agriculturalPlants.contains(b.getType());
+    }
+
+    /**
+     * Checks if the given {@link Material} is an aquatic plant.
+     *
+     * @param m The {@link Material} to check.
+     * @return {@code true} if the {@link Material} m is an aquatic plant, {@code false} otherwise.
+     */
+    public boolean isAnAquaticPlant(@NotNull Material m) {
+        return aquaticPlants.contains(m);
+    }
+
+    /**
+     * Checks if the given {@link Block} represents a sapling.
+     *
+     * @param block The {@link Block} to check.
+     * @return {@code true} if the {@link Block} is a sapling, {@code false} otherwise.
+     */
+    public boolean isSapling(@NotNull Block block) {
+        return saplings.contains(block.getType());
+    }
+
+    public boolean isSapling(@NotNull Material material) {
+        return saplings.contains(material);
+    }
+
+    /**
+     * Checks if a given {@link Material} represents a clickable seed.
+     *
+     * @param material The {@link Material} to check for clickability.
+     * @return {@code true} if the {@link Material} is a clickable seed, {@code false} otherwise.
+     */
+    public boolean isClickableSeed(@NotNull Material material) {
+        return clickableSeeds.contains(material);
+    }
+
+    public boolean isUpwardsGrowingPlant(@NotNull Material material) {
+        return upwardsGrowingPlants.contains(material);
+    }
+
+    public boolean isDownwardsGrowingPlant(@NotNull Material material) {
+        return downwardsGrowingPlants.contains(material);
+    }
+
+    public boolean isGrowEventReturnsAirBlockPlant(@NotNull Material material) {
+        return growEventReturnsAirBlockPlants.contains(material);
+    }
+
+    public HashSet<Material> getGrowthModifiedPlants() {
+        return materialMapper.getGrowthModifiedPlants();
+    }
+
+    public boolean isGrowthModifiedPlant(@NotNull Material material) {
+        return materialMapper.isGrowthModifiedPlant(material);
+    }
+
+    public boolean isGrowthModifiedPlant(@NotNull Block block) {
+        return materialMapper.isGrowthModifiedPlant(block);
+    }
+
+    public Material getGrassMaterial() {
+        return grassMaterial;
+    }
 
 }
